improvement: added FA icons to documentadd module (and some that references it)

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1716,3 +1716,12 @@
     content: @fa-var-grip-horizontal;
   }
 }
+
+.lms-ui-icon-template {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-stamp;
+  }
+}
