--- a/templates/default/document/documentpromotions.html
+++ b/templates/default/document/documentpromotions.html
@@ -6,7 +6,7 @@
 	<THEAD>
 	<TR class="hand lmsbox-titlebar" data-lmsbox-content="documentpromotionpanel">
 		<TD>
-			<IMG src="img/promoschema.gif" alt="">
+			{icon name="money" class="fa-fw"}
 			<span class="bold">{trans("Promotion Schema:")}</span>
 		</TD>
 	</TR>
