--- a/templates/default/document/documentreference.html
+++ b/templates/default/document/documentreference.html
@@ -1,6 +1,6 @@
 {if $cid && $references}
 <TD>
-    <IMG src="img/docum.gif" alt="">
+    {icon name="document" class="fa-fw"}
 </TD>
 <TD class="bold nobr">
     {trans("Reference document:")}
