--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -64,6 +64,8 @@
 										<OPTION value="52">{trans("in debt")}</OPTION>
 										<OPTION value="57">{trans("in debt above 100%")}</OPTION>
 										<OPTION value="58">{trans("in debt above 200%")}</OPTION>
+										<option value="79">{trans("with active tariffless liabilities")}</option>
+										<option value="80">{trans("with tariffless liabilities")}</option>
 										<OPTION value="59">{trans("without contracts")}</OPTION>
 										<OPTION value="76">{trans("without active contracts")}</OPTION>
 										<OPTION value="60">{trans("with expired contracts")}</OPTION>
