--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -469,9 +469,12 @@
 					<OPTION VALUE="58">{trans("in debt above 200%")}</OPTION>
 					<option value="71">{trans("overdue receivables")}</option>
 				{/if}
+				<OPTION VALUE="55">{trans("without tariff")}</OPTION>
+				<OPTION VALUE="75">{trans("with discount")}</OPTION>
+				<option value="79">{trans("with active tariffless liabilities")}</option>
+				<option value="80">{trans("with tariffless liabilities")}</option>
 				<OPTION VALUE="53">{trans("online")}</OPTION>
 				<OPTION VALUE="54">{trans("without group")}</OPTION>
-				<OPTION VALUE="55">{trans("without tariff")}</OPTION>
 				<OPTION VALUE="56">{trans("suspended<!plural>")}</OPTION>
 				<OPTION value="59">{trans("without contracts")}</OPTION>
 				<OPTION value="76">{trans("without active contracts")}</OPTION>
@@ -479,7 +482,6 @@
 				<OPTION value="77">{trans("with expired, active contracts")}</OPTION>
 				<OPTION value="61">{trans("with expiring contracts")}</OPTION>
 				<OPTION value="78">{trans("with expiring, active contracts")}</OPTION>
-				<OPTION VALUE="75">{trans("with discount")}</OPTION>
 				<OPTION VALUE="70">{trans("TERRIT not specified")}</OPTION>
 				<OPTION VALUE="74">{trans("ZIP code not specified")}</OPTION>
 				<OPTION value="73">{trans("with unarchived documents")}</OPTION>
