--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1725,3 +1725,12 @@
     content: @fa-var-stamp;
   }
 }
+
+.lms-ui-icon-permissions {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-user-lock;
+  }
+}
