--- a/templates/default/document/documenttypeedit.html
+++ b/templates/default/document/documenttypeedit.html
@@ -11,18 +11,18 @@
 		<COL style="width: 1%;">
 		<COL style="width: 98%;">
 	</COLGROUP>
-    <THEAD>
+	<THEAD>
 	<TR>
 		<TD colspan="3" class="bold">
-			<IMG src="img/docum.gif" alt="">
+			{icon name="document" class="fa-fw"}
 			{trans("Name:")} {$documenttype.name}
 		</TD>
 	</TR>
-    </THEAD>
-    <TBODY>
+	</THEAD>
+	<TBODY>
 	<TR>
 		<TD>
-			<IMG src="img/users.gif" alt="">
+			{icon name="permissions" class="fa-fw"}
 		</TD>
 		<TD class="bold nobr">
 			{trans("Permissions:")}
@@ -71,12 +71,16 @@
 		</TD>
 	</TR>
 	<TR>
-		<TD colspan="3" class="buttons">
-			<A href="javascript:document.typeedit.submit();" accesskey="s">{trans("Submit")} <IMG src="img/save.gif" alt=""></A>
-			<A href="?m=documenttypes">{trans("Cancel")} <IMG src="img/cancel.gif" alt=""></A>
+		<TD colspan="3" class="lms-ui-box-buttons">
+			<div id="document-button-panel">
+				<div>
+					{button type="submit" icon="save" id="submit-button" label="Submit"}
+					{button icon="cancel" label="Cancel" onclick="location.href = '?m=documenttypes';"}
+				</div>
+			</div>
 		</TD>
 	</TR>
-    </TBODY>
+	</TBODY>
 </TABLE>
 <script>
 
