Let's be more uniform with strings

--- a/templates/default/document/documentadd.html
+++ b/templates/default/document/documentadd.html
@@ -151,7 +151,7 @@
 		</TD>
 		<TD>
 			<SELECT SIZE="1" NAME="document[type]" onchange="DocTypeChanged();" {tip class="lms-ui-advanced-select" text="Select document type" trigger="type"} required>
-				<OPTION VALUE="0">... {trans("select type")} ...</OPTION>
+				<OPTION VALUE="0">{trans("select type")}</OPTION>
 				{foreach from=$_DOCTYPES key=key item=item}{if $key < 0 && in_array($key, $docrights)}
 				<OPTION VALUE="{$key}"{if $document.type==$key} SELECTED{/if}>{$item}</OPTION>
 				{/if}{/foreach}
