improvement: added FA icons to whole documents module (and some that refe… (#1936)

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1716,3 +1716,21 @@
     content: @fa-var-grip-horizontal;
   }
 }
+
+.lms-ui-icon-template {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-stamp;
+  }
+}
+
+.lms-ui-icon-permissions {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-user-lock;
+  }
+}
