--- a/templates/default/user/useradd.html
+++ b/templates/default/user/useradd.html
@@ -278,7 +278,7 @@
 				{icon name="division" class="fa-fw"} {trans("Divisions:")}
 			</td>
 			<td>
-				<select SIZE="4" NAME="useradd[divisions][]" id="divisions" multiple {tip text="Select divisions" class="lms-ui-multiselect" trigger="division"} data-default-value="{trans("- none -")}" data-shorten-to-default-value="false">
+				<select SIZE="4" NAME="useradd[divisions][]" id="divisions" multiple {tip text="Select divisions" class="lms-ui-multiselect" trigger="division"} data-default-value="{trans("- none -")}" data-shorten-to-default-value="false" required>
 					{foreach $divisions as $division}
 						<option value="{$division.id}" {if isset($useradd.divisions) && in_array($division.id, $useradd.divisions)} selected{/if}>
 							{$division.label|escape|truncate:30:"...":true}
