--- a/templates/default/event/eventmodify.html
+++ b/templates/default/event/eventmodify.html
@@ -119,8 +119,9 @@
 							{foreach $userlist as $user}
 								{if $layout.module == 'eventadd'}
 									{if $user.access}
-										<OPTION value="{$user.id}">
-											{$user.rname|escape|truncate:40:"...":true} ({$user.login})
+										<OPTION value="{$user.id}"
+											{if is_array($event.userlist) && in_array($user.id, $event.userlist)}selected{/if}>
+												{$user.rname|escape|truncate:40:"...":true} ({$user.login})
 										</OPTION>
 									{/if}
 								{else}
