improvement: show tariff type in promotion/schema tariff list (small visual fix)

--- a/templates/default/promotion/promotionschemadata.html
+++ b/templates/default/promotion/promotionschemadata.html
@@ -104,7 +104,7 @@
 					<TD class="valign-top">
 						{icon name="money" class="drag-icon fa-fw"}&nbsp;<A href="?m=tariffinfo&id={$tariff.tariffid}" class="bold">{$tariff.name}</A>
 					</TD>
-					<TD class="nobr">
+					<TD class="nobr valign-top">
 						{$_SERVICETYPES[$tariff.type]}
 					</TD>
 					<TD class="text-right valign-top bold nobr">
