--- a/templates/default/event/eventlistboxrow.html
+++ b/templates/default/event/eventlistboxrow.html
@@ -28,7 +28,7 @@
                     {/if}
                     <br>
                     <a href="?m=userinfo&amp;id={$user.id}"
-                       style="font-weight: normal;" {if isset($user.noaccess)} class="lms-ui-crossed"{/if}>{$user.name|escape|truncate:"25":"...":true}</a>
+                       style="font-weight: normal;" {if isset($user.noaccess)} class="lms-ui-crossed"{/if}>{$user.name|truncate:"25":"...":true|escape}</a>
                 {/foreach}
             {else}
                 <br>
